--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,12 +2,9 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
+  "lint": "ng lint",
+  "test": "ng test",
+  "build": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
